<resources>
    <string name="add">+</string>
    <string name="dot">.</string>
    <string name="divide">/</string>
    <string name="clear">CLR</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="equalsTo">=</string>
    <string name="digit_one">1</string>
    <string name="digit_six">6</string>
    <string name="digit_two">2</string>
    <string name="digit_four">4</string>
    <string name="digit_zero">0</string>
    <string name="digit_five">5</string>
    <string name="three_dots">…</string>
    <string name="digit_nine">9</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_three">3</string>
    <string name="your_age_is">Your age is</string>
    <string name="app_name">Practicing Kotlin</string>
    <string name="selected_date">Selected date</string>
    <string name="calculate_your_age">Calculate Your Age</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
</resources>
